메인수정 및 유관기관 안내 탭추가 수정

--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -13,6 +13,7 @@
     <!-- pub js -->
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
+    <script src="../js/swiper-bundle.min.js"></script>
     <script src="../js/common.js"></script>
 
 </head>
@@ -331,91 +332,121 @@
                         <!-- 첫번째 탭 -->
                         <div class="on tab_content_01">
 
-                            <div class="statistics_box">
-                                <ul>
-                                    <li>
-                                        <span>8조 2,153억원</span>
-                                        <strong>총 조성금액</strong>
-                                    </li>
-                                    <li>
-                                        <span>8,548개</span>
-                                        <strong>투자기업수</strong>
-                                    </li>
-                                    <li>
-                                        <span>26조 650억원</span>
-                                        <strong>투자금액</strong>
-                                    </li>
-                                    <li>
-                                        <span>1.3배</span>
-                                        <strong>청산 자펀드 수익배수</strong>
-                                    </li>
-                                    <li>
-                                        <span>27개중 23개</span>
-                                        <strong>유니콘 기업 배출수</strong>
-                                    </li>
-                                </ul>
+                            <div class="statistics_group statistics_01">
+                                <div class="statistics_box">
+                                    <ul class="swiper-wrapper">
+                                        <li class="swiper-slide">
+                                            <span>8조 2,153억원</span>
+                                            <strong>총 조성금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>8,548개</span>
+                                            <strong>투자기업수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>26조 650억원</span>
+                                            <strong>투자금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>1.3배</span>
+                                            <strong>청산 자펀드 수익배수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>27개중 23개</span>
+                                            <strong>유니콘 기업 배출수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>8조 2,152223억원</span>
+                                            <strong>총 조성금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>8,548개</span>
+                                            <strong>투자기업수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>26조 222650억원</span>
+                                            <strong>투자금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>1.3배</span>
+                                            <strong>청산 자펀드 수익배수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>27개중 23개</span>
+                                            <strong>유니콘 기업 배출수</strong>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button class="swiper-button-prev"></button>
+                                <button class="swiper-button-next"></button>
                             </div>
-
                         </div>
                         <!-- //첫번째 탭 -->
 
                         <!-- 두번째 탭 -->
                         <div class="tab_content_02">
                             
-                            <div class="statistics_box">
-                                <ul>
-                                    <li>
-                                        <span>8조 2,153억원</span>
-                                        <strong>총 조성금액</strong>
-                                    </li>
-                                    <li>
-                                        <span>8,548개</span>
-                                        <strong>투자기업수</strong>
-                                    </li>
-                                    <li>
-                                        <span>26조 650억원</span>
-                                        <strong>투자금액</strong>
-                                    </li>
-                                    <li>
-                                        <span>1.3배</span>
-                                        <strong>청산 자펀드 수익배수</strong>
-                                    </li>
-                                    <li>
-                                        <span>27개중 23개</span>
-                                        <strong>유니콘 기업 배출수</strong>
-                                    </li>
-                                </ul>
+                            <div class="statistics_group statistics_02">
+                                <div class="statistics_box">
+                                    <ul class="swiper-wrapper">
+                                        <li class="swiper-slide">
+                                            <span>8조 2,153억원</span>
+                                            <strong>총 조성금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>8,548개</span>
+                                            <strong>투자기업수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>26조 650억원</span>
+                                            <strong>투자금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>1.3배</span>
+                                            <strong>청산 자펀드 수익배수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>27개중 23개</span>
+                                            <strong>유니콘 기업 배출수</strong>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button class="swiper-button-prev"></button>
+                                <button class="swiper-button-next"></button>
                             </div>
-
                         </div>
                         <!-- //두번째 탭 -->
 
                         <!-- 세번째 탭 -->
                         <div class="tab_content_03">
                             
-                            <div class="statistics_box">
-                                <ul>
-                                    <li>
-                                        <span>8조 2,153억원</span>
-                                        <strong>총 조성금액</strong>
-                                    </li>
-                                    <li>
-                                        <span>8,548개</span>
-                                        <strong>투자기업수</strong>
-                                    </li>
-                                    <li>
-                                        <span>26조 650억원</span>
-                                        <strong>투자금액</strong>
-                                    </li>
-                                    <li>
-                                        <span>1.3배</span>
-                                        <strong>청산 자펀드 수익배수</strong>
-                                    </li>
-                                    <li>
-                                        <span>27개중 23개</span>
-                                        <strong>유니콘 기업 배출수</strong>
-                                    </li>
-                                </ul>
+                            <div class="statistics_group statistics_03">
+                                <div class="statistics_box">
+                                    <ul class="swiper-wrapper">
+                                        <li class="swiper-slide">
+                                            <span>8조 2,153억원</span>
+                                            <strong>총 조성금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>8,548개</span>
+                                            <strong>투자기업수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>26조 650억원</span>
+                                            <strong>투자금액</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>1.3배</span>
+                                            <strong>청산 자펀드 수익배수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>27개중 23개</span>
+                                            <strong>유니콘 기업 배출수</strong>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button class="swiper-button-prev"></button>
+                                <button class="swiper-button-next"></button>
                             </div>
 
                         </div>
@@ -473,7 +504,8 @@
                     </div>
 
                     <div class="chart">
-                        <span style="display: flex; align-items: center; justify-content: center; background-color: #ccc; height: 300px;">차트영역</span>
+                        <img src="../images/content/chart_01.png" alt="">
+                        <!-- <span style="display: flex; align-items: center; justify-content: center; background-color: #ccc; height: 300px;">차트영역</span> -->
                     </div>
                 </div>
 
@@ -514,7 +546,7 @@
                 <div class="performance_box">
                     <div class="chart_group_box">
                         <div class="chart">
-                            차트영역
+                            <img src="../images/content/chart_02.png" alt="">
                         </div>
                     </div>
                     <div class="btn_box_group">
@@ -580,5 +612,60 @@
     </footer>
 
 </div>
+
+<script>
+    // swiper
+    var swiper = new Swiper('.statistics_01 .statistics_box', {
+        slidesPerView: 1,
+        spaceBetween: 0,
+        freeMode: false,
+        speed: 300,
+        navigation: {
+          nextEl: '.statistics_01 .swiper-button-next',
+          prevEl: '.statistics_01 .swiper-button-prev',
+        },
+        observer: true,
+        mousewheel: true,
+        breakpoints: {
+            768: {
+                slidesPerView: 5,
+            },
+        }
+    });
+    var swiper = new Swiper('.statistics_02 .statistics_box', {
+        slidesPerView: 1,
+        spaceBetween: 0,
+        freeMode: false,
+        speed: 300,
+        navigation: {
+          nextEl: '.statistics_02 .swiper-button-next',
+          prevEl: '.statistics_02 .swiper-button-prev',
+        },
+        observer: true,
+        mousewheel: true,
+        breakpoints: {
+            768: {
+                slidesPerView: 5,
+            },
+        }
+    });
+    var swiper = new Swiper('.statistics_03 .statistics_box', {
+        slidesPerView: 1,
+        spaceBetween: 0,
+        freeMode: false,
+        speed: 300,
+        navigation: {
+          nextEl: '.statistics_03 .swiper-button-next',
+          prevEl: '.statistics_03 .swiper-button-prev',
+        },
+        observer: true,
+        mousewheel: true,
+        breakpoints: {
+            768: {
+                slidesPerView: 5,
+            },
+        }
+    });
+</script>
 </body>
 </html>
