--- a/portal/html/USR-1221-F-DASH.html
+++ b/portal/html/USR-1221-F-DASH.html
@@ -335,7 +335,8 @@
                                 <!-- 차트 -->
                                 <div class="left">
                                     <div class="chart">
-                                        <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span>
+                                        <img src="../images/content/chart_03.png" alt="" style="width: 100%;">
+                                        <!-- <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span> -->
                                     </div>
                                 </div>
 
@@ -549,7 +550,8 @@
                                         <li><button>2022</button></li>
                                     </ul>
                                     <div class="chart">
-                                        <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span>
+                                        <img src="../images/content/chart_04.png" alt="" style="width: 100%;">
+                                        <!-- <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span> -->
                                     </div>
                                 </div>
 
@@ -747,7 +749,8 @@
                                 <!-- 차트 -->
                                 <div class="left">
                                     <div class="chart">
-                                        <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span>
+                                        <img src="../images/content/chart_05.png" alt="" style="width: 100%;">
+                                        <!-- <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span> -->
                                     </div>
                                 </div>
 
@@ -904,7 +907,8 @@
                                 <!-- 차트 -->
                                 <div class="left">
                                     <div class="chart">
-                                        <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span>
+                                        <img src="../images/content/chart_06.png" alt="" style="width: 100%;">
+                                        <!-- <span style="display: flex; justify-content: center; align-items: center; background-color: #ddd; height: 100%;">차트영역</span> -->
                                     </div>
                                 </div>
 
