--- a/portal/html/USR-1361-H-CONTN.html
+++ b/portal/html/USR-1361-H-CONTN.html
@@ -325,6 +325,7 @@
                             <li><a href="" rel="tab_content_03">한국벤처캐피탈협회</a></li>
                             <li><a href="" rel="tab_content_04">창업진흥원</a></li>
                             <li><a href="" rel="tab_content_05">한국엔젤투자협회</a></li>
+                            <li><a href="" rel="tab_content_06">한국액셀러레이터협회</a></li>
                         </ul>
                     </div>
                     <div class="tab_content">
@@ -774,6 +775,12 @@
 
                         </div>
                         <!-- //다섯번째 탭 -->
+
+                        <!-- 여섯번째 탭 -->
+                        <div class="tab_content_06">
+
+                        </div>
+                        <!-- //여섯번째 탭 -->
 
                     </div>
                 </div>
