--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -316,17 +316,31 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit">등록된 벤처기업</div>
+                                        <div class="total_tit">투자받은 기업 수</div>
                                         <div class="total_content">
-                                            <strong>9,203</strong>
+                                            <strong>2,438</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">투자받은 기업수</div>
+                                        <div class="total_tit">투자받은 기업 수</div>
                                         <div class="total_content">
-                                            <strong>6,496</strong>
-                                            <span>건</span>
+                                            <strong>4,438</strong>
+                                            <span>개사</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total_tit">투자받은 금액</div>
+                                        <div class="total_content">
+                                            <strong>76,802</strong>
+                                            <span>억원</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total_tit">투자받은 금액</div>
+                                        <div class="total_content">
+                                            <strong>6802</strong>
+                                            <span>억원</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -648,7 +662,8 @@
                                         </div>
                                         <div class="chart">
                                             <!-- 차트영역 -->
-                                            <span style="display: flex; height: 300px; background-color: #aaa; color: #fff;">차트영역 임시</span>
+                                            <img src="../images/content/main_chart.png" alt="" style="width: 100%;">
+                                            <!-- <span style="display: flex; height: 300px; background-color: #aaa; color: #fff;">차트영역 임시</span> -->
                                         </div>
                                     </div>
                                 </div>
@@ -686,7 +701,8 @@
                                         </div>
                                         <div class="chart">
                                             <!-- 차트영역 -->
-                                            <span style="display: flex; height: 100%; background-color: #aaa; color: #fff;">차트영역 임시</span>
+                                            <img src="../images/content/main_chart.png" alt="" style="width: 100%;">
+                                            <!-- <span style="display: flex; height: 100%; background-color: #aaa; color: #fff;">차트영역 임시</span> -->
                                         </div>
                                     </div>
                                 </div>
@@ -731,7 +747,8 @@
                                         </div>
                                         <div class="chart">
                                             <!-- 차트영역 -->
-                                            <span style="display: flex; height: 100%; background-color: #aaa; color: #fff;">차트영역 임시</span>
+                                            <img src="../images/content/main_chart.png" alt="" style="width: 100%;">
+                                            <!-- <span style="display: flex; height: 100%; background-color: #aaa; color: #fff;">차트영역 임시</span> -->
                                         </div>
                                     </div>
                                 </div>
