--- a/pub_list.html
+++ b/pub_list.html
@@ -157,7 +157,7 @@
                     path:'./portal/html/main.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
