메인페이지 수정

--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -316,28 +316,28 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit">투자받은 기업 수</div>
+                                        <div class="total_tit"><span>벤처투자조합</span>투자받은 기업 수</div>
                                         <div class="total_content">
                                             <strong>2,438</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">투자받은 기업 수</div>
+                                        <div class="total_tit"><span>창업기획자</span>투자받은 기업 수</div>
                                         <div class="total_content">
                                             <strong>4,438</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">투자받은 금액</div>
+                                        <div class="total_tit"><span>벤처투자조합</span>투자받은 금액</div>
                                         <div class="total_content">
                                             <strong>76,802</strong>
                                             <span>억원</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">투자받은 금액</div>
+                                        <div class="total_tit"><span>창업기획자</span>투자받은 금액</div>
                                         <div class="total_content">
                                             <strong>6802</strong>
                                             <span>억원</span>
@@ -400,17 +400,31 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit">등록된 벤처기업</div>
+                                        <div class="total_tit"><span>벤처투자조합</span>신규결성 조합수/결성금액</div>
                                         <div class="total_content">
-                                            <strong>9,203</strong>
-                                            <span>개사</span>
+                                            <strong>404/92,171</strong>
+                                            <span>개/억원</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">투자받은 기업수</div>
+                                        <div class="total_tit"><span>개인투자조합</span>신규결성 조합수/결성금액</div>
                                         <div class="total_content">
-                                            <strong>6,496</strong>
-                                            <span>건</span>
+                                            <strong>271/41,326</strong>
+                                            <span>개/억원</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total_tit"><span>벤처투자조합</span>운영중인 조합수/결성금액</div>
+                                        <div class="total_content">
+                                            <strong>93/5,312</strong>
+                                            <span>개/억원</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total_tit"><span>개인투자조합</span>운영중인 조합수/결성금액</div>
+                                        <div class="total_content">
+                                            <strong>69/5,312</strong>
+                                            <span>개/억원</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -464,31 +478,31 @@
                                 </div>
                                 <ul class="total">
                                     <li>
-                                        <div class="total_tit">총 조성금액</div>
+                                        <div class="total_tit">벤처기업 수</div>
                                         <div class="total_content">
-                                            <strong>8조1,636</strong>
-                                            <span>억원</span>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="total_tit">출자펀드</div>
-                                        <div class="total_content">
-                                            <strong>781</strong>
-                                            <span>건</span>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="total_tit">등록된 투자자</div>
-                                        <div class="total_content">
-                                            <strong>215,133</strong>
+                                            <strong>5,192</strong>
                                             <span>개사</span>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="total_tit">투자 잔액</div>
+                                        <div class="total_tit">코스닥 신규상장기업 수</div>
                                         <div class="total_content">
-                                            <strong>211,171</strong>
-                                            <span>억원</span>
+                                            <strong>100</strong>
+                                            <span>개사</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total_tit">VC투자를 받은 기업수</div>
+                                        <div class="total_content">
+                                            <strong>742(14.3%)</strong>
+                                            <span>개사</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total_tit">벤처투자유형 벤처기업수</div>
+                                        <div class="total_content">
+                                            <strong>62(62%)</strong>
+                                            <span>개사</span>
                                         </div>
                                     </li>
                                 </ul>
@@ -638,16 +652,23 @@
                                     <div class="total">
                                         <ul>
                                             <li>
-                                                <div class="total_tit">총 조성금액</div>
+                                                <div class="total_tit money">창업투자회사 수</div>
                                                 <div class="total_content">
-                                                    <strong>8조1,636</strong>
+                                                    <strong>197</strong>
+                                                    <span>개사</span>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="total_tit search_m">운용중인 펀드 금액</div>
+                                                <div class="total_content">
+                                                    <strong>357,821</strong>
                                                     <span>억원</span>
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="total_tit">출자펀드 투자금액</div>
+                                                <div class="total_tit search_m">출자펀드 투자금액</div>
                                                 <div class="total_content">
-                                                    <strong>26조2,171</strong>
+                                                    <strong>227,821</strong>
                                                     <span>억원</span>
                                                 </div>
                                             </li>
