--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -699,16 +699,23 @@
                                     <div class="total">
                                         <ul>
                                             <li>
-                                                <div class="total_tit">총 조성금액</div>
+                                                <div class="total_tit people">창업기획자 수</div>
                                                 <div class="total_content">
-                                                    <strong>8조1,636</strong>
+                                                    <strong>235</strong>
+                                                    <span>개</span>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="total_tit search_m">운용중인 펀드금액</div>
+                                                <div class="total_content">
+                                                    <strong>262,171</strong>
                                                     <span>억원</span>
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="total_tit">출자펀드 투자금액</div>
+                                                <div class="total_tit search_m">출자펀드 투자금액</div>
                                                 <div class="total_content">
-                                                    <strong>26조2,171</strong>
+                                                    <strong>813,456</strong>
                                                     <span>억원</span>
                                                 </div>
                                             </li>
@@ -738,21 +745,28 @@
                                     <div class="total">
                                         <ul>
                                             <li>
-                                                <div class="total_tit">엔젤클럽</div>
+                                                <div class="total_tit people">전문엔젤 수</div>
+                                                <div class="total_content">
+                                                    <strong>1,254</strong>
+                                                    <span>개</span>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="total_tit people">엔젤클럽 수</div>
                                                 <div class="total_content">
                                                     <strong>253</strong>
                                                     <span>개</span>
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="total_tit">개인투자조합</div>
+                                                <div class="total_tit chart">개인투자조합</div>
                                                 <div class="total_content">
                                                     <strong>2,801</strong>
                                                     <span>개</span>
                                                 </div>
                                             </li>
                                             <li>
-                                                <div class="total_tit">출자총액</div>
+                                                <div class="total_tit gold">출자총액</div>
                                                 <div class="total_content">
                                                     <strong>18,302</strong>
                                                     <span>억원</span>
