--- a/portal/html/USR-1220-F-DASH.html
+++ b/portal/html/USR-1220-F-DASH.html
@@ -341,39 +341,31 @@
                                         </li>
                                         <li class="swiper-slide">
                                             <span>8,548개</span>
-                                            <strong>투자기업수</strong>
+                                            <strong>출자펀드</strong>
                                         </li>
                                         <li class="swiper-slide">
                                             <span>26조 650억원</span>
-                                            <strong>투자금액</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>1.3배</span>
-                                            <strong>청산 자펀드 수익배수</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>27개중 23개</span>
-                                            <strong>유니콘 기업 배출수</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>8조 2,152223억원</span>
-                                            <strong>총 조성금액</strong>
-                                        </li>
-                                        <li class="swiper-slide">
-                                            <span>8,548개</span>
                                             <strong>투자기업수</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>26조 222650억원</span>
+                                            <span>1.3배</span>
                                             <strong>투자금액</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>1.3배</span>
-                                            <strong>청산 자펀드 수익배수</strong>
+                                            <span>27개중 23개</span>
+                                            <strong>자조합 청산 수익률</strong>
                                         </li>
                                         <li class="swiper-slide">
-                                            <span>27개중 23개</span>
-                                            <strong>유니콘 기업 배출수</strong>
+                                            <span>8조 2,152223억원</span>
+                                            <strong>유니콘기업 배출수</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>8,548개</span>
+                                            <strong>창업기업투자후7년 생존율</strong>
+                                        </li>
+                                        <li class="swiper-slide">
+                                            <span>26조 222650억원</span>
+                                            <strong>코스닥 상장기업 중 모태자펀드 투자기업</strong>
                                         </li>
                                     </ul>
                                 </div>
