--- a/portal/html/USR-1361-H-CONTN.html
+++ b/portal/html/USR-1361-H-CONTN.html
@@ -229,7 +229,7 @@
                             </ul>
                         </li>
                         <li class="depth3">
-                            <a href="l">업무처리지원</a>
+                            <a href="">업무처리지원</a>
                             <ul>
                                 <li><a href="./USR-1251-H-CONTN.html">VC 경력 확인</a></li>
                                 <li><a href="./USR-1242-F-LIST.html">신청내역확인</a></li>
